# remember

./: .gitignore  LICENSE  README.md  README_CN.md  make-better.md  package-lock.json  package.json  plan.md
.trae/documents/: prd.md  technical-architecture.md
docs/: desktop-app.md  security.md
frontend/: .gitignore  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/src/: ai.rs  commands.rs  crypto.rs  lib.rs  main.rs  storage.rs
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/__tests__/: api.test.ts  utils.test.ts
frontend/src/lib/components/: CredentialForm.svelte  CredentialList.svelte  DreamList.svelte  HabitTracker.svelte  KnowledgeBase.svelte  Login.svelte  Settings.svelte  ThoughtDiary.svelte
frontend/src/lib/components/memoir/: AiChat.svelte  AiSettings.svelte  MemoirCard.svelte  MemoirLinks.svelte  MemoirList.svelte  MemoirPanel.svelte  MemoirSearch.svelte  MemoirTimeline.svelte
frontend/src/lib/memoir/: constants.ts
frontend/src/lib/stores/: aiConfig.ts
src/: App.tsx
src/components/auth/: LoginForm.tsx
src/components/credentials/: CredentialCard.tsx  CredentialForm.tsx  SearchBar.tsx
src/components/layout/: Header.tsx
src/components/settings/: SettingsPage.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/lib/: crypto.ts  database.ts  types.ts  utils.ts
src/lib/sync/: adapter.ts  index.ts  manager.ts  types.ts
src/lib/sync/adapters/: webdav.ts
src/pages/: DashboardPage.tsx  LoginPage.tsx
src/stores/: authStore.ts  credentialStore.ts
