[package]
name = "remember"
version = "1.0.0"
description = "A secure personal digital archive"
authors = ["Remember Team"]
edition = "2021"

[lib]
name = "remember_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 加密相关
# libsodium-sys-stable = "1"  # libsodium绑定（后续添加）
# 密钥存储
keyring = "3"  # 系统Keychain访问
# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }
# 错误处理
thiserror = "2"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# Base64编码
base64 = "0.22"
# 随机数生成
getrandom = "0.2"
# SHA-256哈希
sha2 = "0.10"
