[package]
name = "remember"
version = "1.0.0"
description = "你的私密终身保险库 —— 密码、习惯、知识、梦想、人际关系、数字遗产，全部加密，完全由你掌控"
authors = ["Remember Team"]
edition = "2021"

[lib]
name = "remember_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 加密相关
chacha20poly1305 = "0.10"  # AEAD加密（ChaCha20-Poly1305）
# 密钥存储
keyring = "3"  # 系统Keychain访问
# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }
# 错误处理
thiserror = "2"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# Base64编码
base64 = "0.22"
# 随机数生成
getrandom = "0.2"
# SHA-256哈希
sha2 = "0.10"
# HTTP客户端（用于AI API调用）
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
# 流式响应处理
futures-util = "0.3"

[profile.release]
# 优化级别
opt-level = "z"  # 最小化大小
# 链接时优化
lto = true
# 代码生成单元
codegen-units = 1
# 剥离调试信息
strip = true
# panic 策略
panic = "abort"
